h1. CHANGELOG

h2. 2.4.17 December 15, 2013

* allow choice of front-end framework when building 'learn-rails' example
* use 'slim-rails' gem
* remove temporary Haml gems from Gemfile when Slim is selected

h2. 2.4.16 December 11, 2013

* update 'rails-bootstrap' example application to use Bootstrap 3.0

h2. 2.4.15 December 8, 2013

* use Zurb Foundation 4 for 'learn-rails' example application
* gem 'compass-rails' 2.0.alpha.0 was yanked, use version 1.1.2

h2. 2.4.14 November 22, 2013

* support Zurb Foundation 5

h2. 2.4.13 November 14, 2013

* use the 'rails_layout' gem to generate navigation links
* remove .gitignore and .gitkeep files unless git recipe is chosen (contributed by Mike Połtyn)
* option to load defaults via HTTP instead of file (contributed by Arnaud Sellenet)
* don't copy the user model from the rails3-mongoid-devise repo (contributed by Arnaud Sellenet)

h2. 2.4.12 November 2, 2013

* use the 'rails_layout' gem to set up a front-end framework
* drop option to use LESS with Twitter Bootstrap (offer Sass version only)
* 'learn-rails' app uses Zurb Foundation 4.0 instead of Twitter Bootstrap 2.3
* upgrade 'simple_form' gem to '3.0.0'
* remove 'bundle_path' preference used with 'bundle install' (https://github.com/RailsApps/rails-composer/issues/138)

h2. 2.4.11 September 19, 2013

* use rails_layout gem to set up layout files for Twitter Bootstrap 2.3

h2. 2.4.10 September 16, 2013

* revert to use Bootstrap 2.3 until SimpleForm supports Bootstrap 3

h2. 2.4.9 September 15, 2013

* use Bootstrap 3 when Rails 4.0 is used; for Rails 3.2 use Bootstrap 2.3
* add preference to specify ph/mysql user/password (contributed by Vitaly Kushner)
* add preference to skip db:seed (contributed by Vitaly Kushner)

h2. 2.4.8 August 26, 2013

* fix syntax error in 'gems' recipe

h2. 2.4.7 August 26, 2013

* fix Compass for using Foundation on Rails 4 (contributed by Mathias)
* eliminate Devise Invitable module as an option for Rails 4 (closes #243)