@@ -88,7 +88,7 @@ TEXT
       :address   => "smtp.mandrillapp.com",
       :port      => 25,
       :user_name => ENV["MANDRILL_USERNAME"],
-      :password  => ENV["MANDRILL_API_KEY"]
+      :password  => ENV["MANDRILL_APIKEY"]
     }
   TEXT
     inject_into_file 'config/environments/development.rb', mandrill_configuration_text, :after => "config.assets.debug = true"
