@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.4.17"
+  VERSION = "2.4.18"
 end
