@@ -1,5 +1,13 @@
 h1. CHANGELOG
 
+h2. 2.4.18 December 28, 2013
+
+* use edge version of html2haml (suggested by Ernest Bursa)
+* fix for mongoid gem
+* added 'createdb' flag to user creation for PostgreSQL (contributed by Tristan Lohman)
+* update Mandrill API key to match Heroku style (contributed by Stephan Meyers)
+* add 'unicorn-rails' gem (suggested by rceee)
+
 h2. 2.4.17 December 15, 2013
 
 * allow choice of front-end framework when building 'learn-rails' example
